--- a/src/static/styles/main.scss
+++ b/src/static/styles/main.scss
@@ -3,3 +3,8 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import '~bootstrap-sass/assets/stylesheets/_bootstrap.scss';
 
 // can add Boostrap overrides, additional Sass/CSS below...
+
+.discard-pile {
+  font-size : 2.5em;
+  font-weight : bold;
+}
