--- a/src/static/styles/main.scss
+++ b/src/static/styles/main.scss
@@ -1,8 +1,5 @@
-$icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
-@import '~bootstrap-sass/assets/stylesheets/bootstrap/_mixins.scss';
-@import '~bootstrap-sass/assets/stylesheets/_bootstrap.scss';
 
-// can add Boostrap overrides, additional Sass/CSS below...
+// can add Boostrap/MaterialUI overrides, additional Sass/CSS below...
 
 .discard-pile {
   font-size : 2.5em;
