player hand lined up

--- a/src/static/styles/main.scss
+++ b/src/static/styles/main.scss
@@ -18,6 +18,12 @@
   font-weight : bold;
 }
 
+.player-card {
+  width : 100px;
+  height : 150px;
+  float : left;
+}
+
 
 /**
  * Styles for CSS Playing Cards
