--- a/src/static/styles/main.scss
+++ b/src/static/styles/main.scss
@@ -20,8 +20,10 @@
 
 .player-card {
   width : 100px;
-  height : 150px;
-  float : left;
+  height : 120px;
+  display: inline-block;
+  margin: 0;
+  //border: 3px solid #73AD21; 
 }
 
 
